# pulse

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  config.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml  security.yml
agents/: orchestrator.py
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20240101_0001_initial_schema.py
apps/api/app/: main.py
apps/api/app/ai/: graph.py  prompts.py  report.py  retriever.py  state.py
apps/api/app/api/: deps.py
apps/api/app/api/routers/: ai.py  auth.py  dashboard.py  devices.py  health.py  patients.py  risk.py  users.py
apps/api/app/clinical/: cha2ds2_vasc.py  euroscore2.py  gas.py  has_bled.py  ifu_fit.py  news2.py  rcri.py
apps/api/app/core/: config.py  database.py  quiver_client.py  redis_client.py  security.py
apps/api/app/models/: __init__.py  audit_log.py  base.py  clinical_note.py  comorbidity.py  conversation.py  device.py  lab.py  medication.py  patient.py  risk_assessment.py  user.py  vital.py
apps/api/app/schemas/: ai.py  auth.py  dashboard.py  device.py  patient.py  user.py
apps/api/app/seed/: generators.py  main.py
apps/api/tests/: conftest.py  test_ai.py  test_auth.py  test_dashboard.py  test_devices.py  test_health.py  test_risk_api.py  test_seed.py  test_users.py
apps/api/tests/clinical/: test_gas.py  test_ifu_fit.py  test_news2.py  test_rcri.py
apps/web/: package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
database/: schemas.py
docs/: architecture.md
docs/adr/: 0001-tech-stack.md  0002-quiver-as-vector-store.md  0003-langgraph-multi-agent.md  0004-agpl-license.md  0005-direct-groq-streaming.md  0006-bge-small-cross-encoder-rerank.md  0007-reportlab-pdf.md  0008-jwt-bearer-only.md  README.md
docs/clinical/: REFERENCES.md
rag/: embedding.py  query_router.py  retriever.py
(+35 files in other folders)
